Fix travel advisories section spacing on city info page.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,11 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Rufina', serif;
 }
 
-h1, h2, h3 {
+.sec-head {
+    padding: 15px 0;
+}
+
+.card-text {
     padding: 15px 0;
 }
 
